# sip-edge-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  k8s-deployment.yaml
.devcontainer/: CACHE.md  README.md  devcontainer.json  docker-compose.dev.yml  setup.sh
benches/: parser_benchmarks.rs
docs/: arch.md
examples/: test_client.rs
src/: codec.rs  lib.rs  main.rs  security.rs  transport.rs  utils.rs
tests/: vulnerability_tests.rs
